resolution des problemes du crud et son frontend coté recette